@@ -19,14 +19,15 @@ package io.spring.initializr.web.controller;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.stream.Stream;
 
 import io.spring.initializr.generator.buildsystem.BuildSystem;
 import io.spring.initializr.generator.buildsystem.maven.MavenBuildSystem;
@@ -153,15 +154,15 @@ public abstract class ProjectGenerationController<R extends ProjectRequest> {
 	}
 
 	private <T extends ArchiveEntry> Path createArchive(ProjectGenerationResult result, String fileExtension,
-			Function<OutputStream, ? extends ArchiveOutputStream> archiveOutputStream,
+			Function<OutputStream, ? extends ArchiveOutputStream<T>> archiveOutputStream,
 			BiFunction<File, String, T> archiveEntry, BiConsumer<T, Integer> setMode) throws IOException {
 		Path archive = this.projectGenerationInvoker.createDistributionFile(result.getRootDirectory(),
 				"." + fileExtension);
 		String wrapperScript = getWrapperScript(result.getProjectDescription());
-		try (ArchiveOutputStream output = archiveOutputStream.apply(Files.newOutputStream(archive))) {
-			Files.walk(result.getRootDirectory())
-				.filter((path) -> !result.getRootDirectory().equals(path))
-				.forEach((path) -> {
+		try (ArchiveOutputStream<T> output = archiveOutputStream.apply(Files.newOutputStream(archive))) {
+			Stream<Path> files = Files.walk(result.getRootDirectory());
+			try (files) {
+				files.filter((path) -> !result.getRootDirectory().equals(path)).forEach((path) -> {
 					try {
 						String entryName = getEntryName(result.getRootDirectory(), path);
 						T entry = archiveEntry.apply(path.toFile(), entryName);
@@ -176,6 +177,7 @@ public abstract class ProjectGenerationController<R extends ProjectRequest> {
 						throw new IllegalStateException(ex);
 					}
 				});
+			}
 		}
 		return archive;
 	}
@@ -198,12 +200,7 @@ public abstract class ProjectGenerationController<R extends ProjectRequest> {
 	private String generateFileName(String artifactId, String extension) {
 		String candidate = (StringUtils.hasText(artifactId) ? artifactId
 				: this.metadataProvider.get().getArtifactId().getContent());
-		try {
-			return URLEncoder.encode(candidate, "UTF-8") + "." + extension;
-		}
-		catch (UnsupportedEncodingException ex) {
-			throw new IllegalStateException("Cannot encode URL", ex);
-		}
+		return URLEncoder.encode(candidate, StandardCharsets.UTF_8) + "." + extension;
 	}
 
 	private static String getWrapperScript(ProjectDescription description) {
